change menu and fix overflow raised count
change menu and fix overflow raised count

--- a/app/assets/stylesheets/campaigns.css.scss
+++ b/app/assets/stylesheets/campaigns.css.scss
@@ -390,8 +390,9 @@
 						line-height: 1;
 						
 						label {
-							font-size: 36px;
+							font-size: 26px;
 							font-weight: bold;
+							margin-left: -5px;
 						}
                         span {
                             font-size: 14px;
